--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
+										<img src="https://www.un.org/sites/un2.un.org/files/field/image/1583952355.1997.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://github.com/iNish27/COVID-19-ANALYSIS/blob/main/README.md" class="link">Covid - 19 Analysis</a></h3>
+										<p>Python Project</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
 										<img src="https://i.pinimg.com/736x/21/e6/47/21e647134ecbe3dbb1d7402b48201e58.jpg" alt="" />
 									</span>
 									<header class="major">
